ui(Homepage): Prevent overflow for long url

--- a/web_modules/layouts/Homepage/style.css
+++ b/web_modules/layouts/Homepage/style.css
@@ -16,10 +16,21 @@
 	border-bottom: 1px solid;
 }
 
+/* Description */
 .postEntry p {
 	font-size: 16px;
 	line-height: 26px;
 	margin-bottom: 26px;
+  /* https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 
 .time {
